--- a/AuthDemoSite/Pages/Index.cshtml
+++ b/AuthDemoSite/Pages/Index.cshtml
@@ -4,13 +4,10 @@
     ViewData["Title"] = "Home page";
 }
 
-@if(User.Identity?.IsAuthenticated ?? false)
+@if (User.Identity?.IsAuthenticated ?? false)
 {
     <h2>Welcome, @User.Identity?.Name!</h2>
-    <p>You are logged in.</p>
-    <form method="post" asp-page-handler="Logout">
-        <button type="submit" class="btn btn-danger">Logout</button>
-    </form>
+    <h3>You are logged in, claims listed below</h3>
 
     <ul>
         @foreach (var modelClaim in User.Claims)
@@ -18,6 +15,12 @@
             <li>@modelClaim</li>
         }
     </ul>
+
+    <hr/>
+
+    <a href="https://login.microsoftonline.com/common/oauth2/v2.0/logout?post_logout_redirect_uri=@Url.PageLink("Index", "Logout")">
+        Logout
+    </a>
 }
 else
 {
